renamed a lot of stuff and moved into functions

--- a/index.html
+++ b/index.html
@@ -70,65 +70,65 @@
 			<div class="container">
 				<div class="row">
 					<div class="col bg-darker m-1 p-3 rounded-3">
-						<label for="masterVolSlider" class="form-label text-secondary">Master<br>Volume</label>
+						<label for="volSliderMaster" class="form-label text-secondary">Master<br>Volume</label>
 						<input type="range" min="0" max="1" step="0.01" value="0.8" orient="vertical"
-							id="masterVolSlider">
+							id="volSliderMaster">
 						<br>
-						<!-- <span id="masterVolSliderValue">null</span> -->
+						<!-- <span id="volSliderMasterValue">null</span> -->
 						<div class="form-check form-switch">
-							<input class="form-check-input" type="checkbox" role="switch" id="muteMasterVol" />
-							<label class="form-check-label" for="muteMasterVol">Mute</label>
+							<input class="form-check-input" type="checkbox" role="switch" id="volMuteMaster" />
+							<label class="form-check-label" for="volMuteMaster">Mute</label>
 						</div>
 					</div>
 				</div>
 				<br>
 				<div class="row">
 					<div class="col bg-darker m-1 p-3 rounded-3">
-						<label for="mixerVolSliderDef" class="form-label text-secondary">Default<br>Sounds</label>
+						<label for="volSliderDefault" class="form-label text-secondary">Default<br>Sounds</label>
 						<input type="range" min="0" max="1" step="0.01" value="0.8" orient="vertical"
-							id="mixerVolSliderDef">
+							id="volSliderDefault">
 						<br>
-						<!-- <span id="mixerVolSliderDefValue">null</span> -->
+						<!-- <span id="volSliderValueDefault">null</span> -->
 						<div class="form-check form-switch">
-							<input class="form-check-input" type="checkbox" role="switch" id="muteMixerVolDef" />
-							<label class="form-check-label" for="muteMixerVolDef">Mute</label>
+							<input class="form-check-input" type="checkbox" role="switch" id="volMuteDefault" />
+							<label class="form-check-label" for="volMuteDefault">Mute</label>
 						</div>
 					</div>
 					<div class="col bg-darker m-1 p-3 rounded-3">
-						<label for="mixerVolSliderImp" class="form-label text-secondary">Important<br>Sounds</label>
+						<label for="volSliderImportant" class="form-label text-secondary">Important<br>Sounds</label>
 
 						<input type="range" min="0" max="1" step="0.01" value="0.8" orient="vertical"
-							id="mixerVolSliderImp">
+							id="volSliderImportant">
 						<br>
-						<!-- <span id="mixerVolSliderImpValue">null</span> -->
+						<!-- <span id="volSliderImportantDefault">null</span> -->
 						<div class="form-check form-switch">
-							<input class="form-check-input" type="checkbox" role="switch" id="muteMixerVolImp" />
-							<label class="form-check-label" for="muteMixerVolImp">Mute</label>
+							<input class="form-check-input" type="checkbox" role="switch" id="volMuteImportant" />
+							<label class="form-check-label" for="volMuteImportant">Mute</label>
 						</div>
 					</div>
 				</div>
 				<br>
 				<div class="row">
 					<div class="col bg-darker m-1 p-3 rounded-3">
-						<label for="mixerVolSliderHov" class="form-label text-secondary">Hover<br>Sounds</label>
+						<label for="volSliderHover" class="form-label text-secondary">Hover<br>Sounds</label>
 						<input type="range" min="0" max="1" step="0.01" value="0.8" orient="vertical"
-							id="mixerVolSliderHov">
+							id="volSliderHover">
 						<br>
-						<!-- <span id="mixerVolSliderHovValue">null</span> -->
+						<!-- <span id="volSliderHoverDefault">null</span> -->
 						<div class="form-check form-switch">
-							<input class="form-check-input" type="checkbox" role="switch" id="muteMixerVolHov" />
-							<label class="form-check-label" for="muteMixerVolHov">Mute</label>
+							<input class="form-check-input" type="checkbox" role="switch" id="volMuteHover" />
+							<label class="form-check-label" for="volMuteHover">Mute</label>
 						</div>
 					</div>
 					<div class="col bg-darker m-1 p-3 rounded-3">
-						<label for="mixerVolSliderHold" class="form-label text-secondary">Hold<br>Sounds<br>(Sliders)</label>
+						<label for="volSliderHold" class="form-label text-secondary">Hold<br>Sounds<br>(Sliders)</label>
 						<input type="range" min="0" max="1" step="0.01" value="0.8" orient="vertical"
-							id="mixerVolSliderHold">
+							id="volSliderHold">
 						<br>
-						<!-- <span id="mixerVolSliderHoldValue">null</span> -->
+						<!-- <span id="volSliderHoldDefault">null</span> -->
 						<div class="form-check form-switch">
-							<input class="form-check-input" type="checkbox" role="switch" id="muteMixerVolHold" />
-							<label class="form-check-label" for="muteMixerVolHold">Mute</label>
+							<input class="form-check-input" type="checkbox" role="switch" id="volMuteHold" />
+							<label class="form-check-label" for="volMuteHold">Mute</label>
 						</div>
 					</div>
 				</div>
