split JS - move from JS to TS

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 				</div>
 
 				<!-- Modal footer -->
-				<div class="modal-footer">
+				<div class="modal-footer" id="modal">
 					<button type="button" class="btn btn-success" data-bs-dismiss="modal">OK</button>
 				</div>
 
@@ -189,7 +189,12 @@
 
 
 	<footer>
-		<script src="script.js"></script>
+		<script src="sid_functions.js"></script>
+		<script src="sid_settings.js"></script>
+		<!-- <script src="index.js"></script> -->
+		<!-- <script>
+			document.getElementById('openModal').click();;
+		</script> -->
 	</footer>
 
 </body>
